--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -166,7 +166,7 @@
     <string name="select_insulin">Select Insulin to Edit</string>
     <string name="select_pump_insulin">Select Pump Insulin</string>
     <string name="select_pen_insulin">Select Insulin</string>
-    <string name="insulin_template">Insulin Template</string>
+    <string name="insulin_template">Template</string>
     <string name="dia">DIA</string>
     <string name="peak">Peak</string>
     <string name="ic_short">IC</string>
